Fix layout of footer on small screens

--- a/_scss/_footer.scss
+++ b/_scss/_footer.scss
@@ -1,6 +1,10 @@
 .site-footer {
   border-top: 1px solid $border-color;
-  display: flex;
-  justify-content: space-between;
   padding-top: $default-margin;
+
+  @media only screen and (min-width: $breakpoint-small) {
+
+    display: flex;
+    justify-content: space-between;
+  }
 }
