--- a/_scss/_variables.scss
+++ b/_scss/_variables.scss
@@ -1,5 +1,6 @@
 $body-bg-color: #fbfcff !default;
 $border-color: #ccc !default;
+$breakpoint-small: 42.5em !default;
 $default-margin: 1.5rem !default;
 $focus-bg-color: #cef !default;
 $link-color: #415781 !default;
